--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
     <string name="robert_downey_jr">Robert<br/> Downey Jr.</string>
     <string name="evans">Chris Evans</string>
     <string name="ruffalo">Mark Ruffalo</string>
-    <string name="hemsworth">Chris<br/> Hemsworth</string>
+    <string name="hemsworth">Chris Hemsworth</string>
 </resources>
